--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
 		<dependency>
 			<groupId>org.bigmouth</groupId>
 			<artifactId>bigmouth-ticket4j</artifactId>
-			<version>1.0.8</version>
+			<version>1.1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.bigmouth</groupId>
