--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,7 @@
 		</dependency>
 	</dependencies>
 	<build>
+		<finalName>ROOT</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
