--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -11,7 +11,7 @@ log4j.appender.Console.layout.ConversionPattern=%d{MM-dd HH:mm:ss,SSS} %5p [%t] 
 
 #RollingFile
 log4j.appender.RollingFile=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.RollingFile.File=../logs/ticket4j.log
+log4j.appender.RollingFile.File=${catalina.home}/logs/ticket4j.log
 log4j.appender.RollingFile.layout=org.apache.log4j.PatternLayout
 log4j.appender.RollingFile.layout.ConversionPattern=%d{MM-dd HH:mm:ss,SSS} %5p [%t] (%F:%L) - %m%n
 
